# mafia-25.09

./: .gitignore  README.md  __main__.py  api_v0.md  api_v0.py  api_v1.py  app.py  examples.py  mafia.py  main.py  nodes.py  pyproject.toml  readme_gen.py  tests.py  v1.api.md
mafia/: __init__.py  _nodes.py  _status.py  _tests.py  core.py  normal.py
mafia/api/: __init__.py  core.py  v0.py  v1.py
mafia/api/v1/: __init__.py  models.py
static/: index.html.js  mafia.css  script.js  style.css
templates/: game.html  game.old.html  game.player.html  index.html
tests/: __init__.py  __main__.py
