[project]
name = "mafia"
version = "0.3.0"
description = "The Mafia party game implemented in Python."
authors = [
    { name = "dare-bea"}
]
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.0",
    "flask-api>=3.2.0",
    "flask-pydantic>=0.12.0",
    "markupsafe>=3.0.3",
    "pydantic==2.10.3",
    "werkzeug>=3.1.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
readme = "README.md"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [ "ALL" ]

# Rules that I still want to explicitly select
extend-select = [
    # Most important rules
    "S",       # flake8-bandit
    "B",       # flake8-bugbear
    "A",       # flake8-builtins
    "C4",      # flake8-comprehensions
    "N",       # pep8-naming
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "PL",      # pylint
    "UP",      # pyupgrade

    # Less important rules, but still useful
    "ERA001",  # eradicate: commented-out-code
    "ANN",     # flake8-annotations
    #"COM812",  # flake8-commas: missing-trailing-comma
        # It's annoying to have a missing comma when extending a list
    "DTZ",     # flake8-datetimez
    "EM",      # flake8-errmsg
    "INT",     # flake8-gettext
        # gettext should be used correctly since that might be added later
    "ISC",     # flake8-implicit-str-concat
        # Prevent bugs from implicit string concatenation
    "ICN",     # flake8-import-conventions
    "PIE",     # flake8-pie
    "Q",       # flake8-quotes
    "RET",     # flake8-return
    "SLF001",  # flake8-self: private-member-access
    "SIM",     # flake8-simplify
    # Style preferences for TODOs
        "TD004",   # flake8-todos: missing-todo-colon
        "TD005",   # flake8-todos: missing-todo-description
        "TD006",   # flake8-todos: invalid-todo-capitalization
        "TD007",   # flake8-todos: missing-space-after-todo-colon
    "PTH",     # flake8-use-pathlib
    "FLY",     # flynt
    "C90",     # mccabe
    "PERF",    # perflint
    "D2", "D3", "D4",  # pydocstyle
    "FURB",    # refurb
    "RUF",     # ruff-specific-rules
    "TRY",     # tryceratops
]

ignore = [
    # Ignore ANN204 because it's not necessary for return type hints
    "ANN204",  # flake8-annotations: missing-return-type-undocumented-special-method

    # Ignore ANN401 because we use Any for type hints
    # This may be changed later and we could just noqa it instead
    "ANN401",  # flake8-annotations: any-type

    # Ignore COM812 because it conflicts with formatter
    "COM812",  # flake8-commas: missing-trailing-comma
    
    # Ignore CPY001 because we don't have a copyright notice
    "CPY001",  # flake8-copyright: missing-copyright-notice

    # Ignore FIX002 because we use TODO comments
    "FIX002",  # flake8-fixme: line-contains-todo

    # Ignore TD002 and TD003 because we don't need to specify authors or links
    "TD002",   # flake8-todos: missing-todo-author
    "TD003",   # flake8-todos: missing-todo-link

    # Ignore TC because we use type checking at runtime
    "TC",      # flake8-type-checking
    
    # Ignore ARG003 and ARG004 because arguments are intended for use in subclasses
    "ARG002",  # flake8-unused-arguments: unused-method-argument
    "ARG003",  # flake8-unused-arguments: unused-class-method-argument
    "ARG004",  # flake8-unused-arguments: unused-static-method-argument

    # Ignore D100, D101, D102, D105, D106, D107 because we might inherit from parent classes
    "D102",    # pydocstyle: missing-docstring-in-public-method
    "D105",    # pydocstyle: missing-docstring-in-magic-method
    "D106",    # pydocstyle: missing-docstring-in-public-nested-class
    "D107",    # pydocstyle: missing-docstring-in-init

    # Ignore D203 and D213 because they conflict with other rules
    "D203",    # pydocstyle: no-blank-line-before-class
    "D213",    # pydocstyle: multi-line-summary-second-line

    "RUF012",  # ruff-specific-rules: mutable-class-default
]

[tool.ruff.lint.per-file-ignores]

"tests/*" = [
    "S101",  # allow assert in tests
    "D",     # allow missing docstrings in tests
]

"tests/__main__.py" = [
    "T20",   # allow print in tests main
    "C901",  # allow complex functions in tests main
    "PLR0912",  # allow too many branches in tests main
    "PLR0915",   # allow too many statements in tests main
]

"mafia/_nodes.py" = [
    "T20",   # allow print in _nodes because it's for debugging only
]

# Ignore all rules in _status.py because it was copied from another project
"mafia/_status.py" = [ "ALL" ]

"mafia/api/v1/models.py" = [
    "D101",  # allow missing docstrings in models
    "EM101", # allow string literals in exceptions
]

# API v0 is overshadowed by v1, so I don't care about it tbh
"mafia/api/v0.py" = [
    "C90",  # allow complex functions
    "PLR",  # allow long functions
]

"mafia/core.py" = [
    "A",  # allow shadowing builtins
]

"mafia/normal.py" = [
    "A",  # allow shadowing builtins
    "D205",  # allow missing blank line after docstring
    "N801",  # allow invalid class name for normal entities
]
