[project]
name = "mafia"
version = "0.4.0"
description = "The Mafia party game implemented in Python."
authors = [
    { name = "dare-bea"}
]
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.0",
    "flask-pydantic==0.12.0",
    "markupsafe>=3.0.3",
    "mypy>=1.13.0",
    "pydantic==2.10.3",
    "werkzeug>=3.1.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
readme = "README.md"